--- a/public/index.html
+++ b/public/index.html
@@ -41,21 +41,22 @@
     <canvas id="myChart"></canvas>
   </div>
 
+    <!-- service worker script -->
+
+  <script>
+    ( function () {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js")
+        .then(() => console.log("PWA Service Worker Sucessfully Registered :)"))
+        .catch(error => console.log("Unable to register PWA Service Worker; Error="+error));
+      }
+    })();
+  </script>
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src ="js/idb.js"></script>
   <script src="js/index.js"></script>
 
-  <!-- service worker script -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/service-worker.js')
-          .then((reg) => {
-            console.log('Service worker registered.', reg);
-          });
-      });
-    }
-  </script>
 
 </body>
 </html>
